[package]
name = "nfd"
version = "0.1.0"
authors = ["Zhen Zhang <izgzhen@gmail.com>"]
build = "build.rs"

[dependencies]
libc = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.0.7"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.2.5"

[lib]
name = "nfd"

[[bin]]
name = "main"
path = "src/main.rs"
