[package]
name = "libnfd"
description = "Rust bindings to nativefiledialog"
license = "MIT"
repository = "https://github.com/izgzhen/nfd"
version = "0.1.2"
authors = ["Zhen Zhang <izgzhen@gmail.com>"]
build = "build.rs"

[dependencies]
libc = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.0.7"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.2.5"

[lib]
name = "nfd"
